# finite-diff

./: CMakeLists.txt  FiniteDiffConfig.cmake.in
src/: finitediff.cpp
